@@ -23,6 +23,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -40,11 +41,10 @@ import java.util.logging.Logger;
 public class LiteralUtil {
 
 	private ResourceBundle literalBundle;
-	private List<String> lstFiles = new ArrayList<>();
+	private final List<String> lstFiles = new ArrayList<>();
 	private final static String DEFAULT_LITERAL = "com.panemu.tiwulfx.res.literal";
 	private Locale locale;
-//	private static Log log = LogFactory.getLog(LiteralUtil.class);
-	private Logger logger = Logger.getLogger(LiteralUtil.class.getName());
+	private final Logger logger = Logger.getLogger(LiteralUtil.class.getName());
 
 	public LiteralUtil(Locale locale) {
 		this.locale = locale;
@@ -85,8 +85,7 @@ public class LiteralUtil {
 	}
 
 	private ResourceBundle build(String baseName) {
-
-		ResourceBundle.Control cntl = ResourceBundle.Control.getControl(Collections.unmodifiableList(Arrays.asList("java.properties")));
+		ResourceBundle.Control cntl = ResourceBundle.Control.getControl(List.of("java.properties"));
 		List<Locale> lcl = cntl.getCandidateLocales(baseName, locale);
 		boolean found = false;
 		for (int i = lcl.size() - 1; i >= 0; i--) {
@@ -104,7 +103,7 @@ public class LiteralUtil {
 			file = toResourceName(file);
 			try (InputStream is = LiteralUtil.class.getResourceAsStream(file)) {
 				if (is != null) {
-					try (InputStreamReader reader = new InputStreamReader(is, "UTF-8")) {
+					try (InputStreamReader reader = new InputStreamReader(is, StandardCharsets.UTF_8)) {
 						literalBundle = new TiwulFXResourceBundle(reader);
 						found = true;
 					}
@@ -129,10 +128,8 @@ public class LiteralUtil {
 
 	private String toResourceName(String bundleName) {
 		String suffix = "properties";
-		StringBuilder sb = new StringBuilder(bundleName.length() + 2 + suffix.length());
-		sb.append("/");
-		sb.append(bundleName.replace('.', '/')).append('.').append(suffix);
-		return sb.toString();
+		return "/" +
+				bundleName.replace('.', '/') + '.' + suffix;
 	}
 
 	private class TiwulFXResourceBundle extends PropertyResourceBundle {
@@ -143,7 +140,5 @@ public class LiteralUtil {
 				super.setParent(literalBundle);
 			}
 		}
-
 	}
-
 }
